--- a/2026_Year/01_Month/15_Day/calculator.html
+++ b/2026_Year/01_Month/15_Day/calculator.html
@@ -44,14 +44,17 @@
         let numTwo = '';
         const $operator = document.querySelector('#operator'); 
         const $result = document.querySelector('#result');
-        document.querySelector('#num-0').addEventListener('click', () => {
-            if (operator) { 
-                numTwo += '0';
-            } else {
-                numOne += '0';
-            }
-            $result.value += '0'; // 클릭한 숫자 화면 표시            
-        }); 
+        for (let i = 0; i < 10; i++) {
+            document.querySelector('#num-0').addEventListener('click', () => {
+                if (operator) { 
+                    numTwo += '0';
+                } else {
+                    numOne += '0';
+                }
+                $result.value += '0'; // 클릭한 숫자 화면 표시            
+            }); 
+        }
+        
         document.querySelector('#num-1').addEventListener('click', () => {
             if (operator) {
                 numTwo += '1';
